Update the FFM migration plan with the product build status and next steps
Assisted-by: multiple AI agents and layers of automated tooling 🤖